# generate_thumbnails_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: generate_thumbnails.rs
src/: ffmpeg.rs  ffprobe.rs  lib.rs  main.rs  thumbnails.rs  utils.rs
src/thumbnails/: ffmpeg_photo_thumbnail.rs  generic_thumbnails.rs  mod.rs  photo_thumbnails.rs  utils.rs  video_thumbnails.rs
