[package]
name = "generate_media_thumbnails"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
walkdir = "2.5.0"
tokio-retry = "0.3.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
temp-dir = "0.1.16"
