[package]
name = "ruurd_photos_thumbnail_generation"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
description = "Generate thumbnails for video/photo files, to be used for a Google Photos alternative."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/generate_thumbnails"
repository = "https://github.com/ruurdbijlsma/generate_thumbnails"
readme = "README.md"
keywords = ["media", "photo", "video", "thumbnail"]
documentation = "https://docs.rs/ruurd_photos_thumbnail_generation/latest/ruurd_photos_thumbnail_generation/index.html"
exclude = [
    "assets",
    ".github",
    "checks",
    ".idea",
]
categories = ["multimedia::images", "multimedia::video"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
tokio-retry = "0.3.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
temp-dir = "0.1.16"
futures = "0.3.31"
color-eyre = "0.6.5"
ravif = { version = "0.12.0", features = ["asm"] }
rayon = "1.11.0"
image = { version = "0.25.8", features = ["jpeg", "png", "gif"] }
fast_image_resize = { version = "5.3.0", features = ["image"] }
rgb = "0.8"
imgref = "1.12.0"
